--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "echarts": "^4.2.1",
     "ngx-echarts": "^4.2.1",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
